k8s-old/apache-php/mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
  namespace: #votre namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
      - name: db
        persistentVolumeClaim:
          claimName: db-data   
      containers:
      - image: mariadb
        name: mariadb
        volumeMounts:
        - name: db
          mountPath: /var/lib/mysql
